--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
       <div class="logo">
         <img src="img/iflogo-60x60.png" width="50" height="50">
       </div>
+      <!--<div class="title">insaneFactory.com</div>-->
       <ul>
         <li><a href="index.html">Home</a></li>
         <li><a href="#projects">Projects</a></li>
@@ -36,7 +37,7 @@
         <h1><a name="about" class="anchor"></a>We are</h1>
         <p>
           A group of passionate developers who like it to play with new technologies and building tools for every-day use.
-          You may follow the team members on Twitter: <a class="twitterlink" href="http://twitter.com/mfreiholz">@mfreiholz</a> / <a class="twitterlink" href="http://twitter.com/mstein">@mstein</a>
+          You may follow the team members on Twitter: <a class="twitterlink" href="http://twitter.com/mfreiholz">@mfreiholz</a> / <a class="twitterlink" href="https://twitter.com/ifatsam">@ifatsam</a>
         </p>
         <p>
           You may also visit our <a href="/blog">blog</a> for general news and updates.
@@ -53,27 +54,27 @@
         <div class="project">
           <div class="title">iF.SVNAdmin</div>
           <div class="description">The iF.SVNAdmin application is a web based GUI to your Subversion authorization file. It is based on PHP 5.3 and requires a web server (Apache) to be installed. The application doesn’t need a database back end or anything similar, it is completely based on the Subversion authorization- and user authentication file. (Inludes LDAP support for users and groups)</div>
-          <div class="links"><a href="http://svnadmin.insanefactory.com/">Homepage</a> | <a href="https://github.com/mfreiholz/iF.SVNAdmin">Sources on Github</a></div>
+          <div class="links"><a href="http://svnadmin.insanefactory.com/">Homepage</a> | <img src="img/GitHub-Mark-64px.png" width="16" height="16"> <a href="https://github.com/mfreiholz/iF.SVNAdmin">Sources on Github</a></div>
         </div>
         <div class="project">
           <div class="title">RC Persistent Login</div>
           <div class="description">This server-side plugin is useful for all Roundcube users who don’t like to log into their mail account each time they open their browser. The plugin stores a persistent login cookie which automatically logs the user in the next time he or she visits the Roundcube web mailer.</div>
-          <div class="links"><a href="#">Homepage</a> | <a href="https://github.com/mfreiholz/Roundcube-Persistent-Login-Plugin">Sources on Github</a></div>
+          <div class="links"><a href="#">Homepage</a> | <img src="img/GitHub-Mark-64px.png" width="16" height="16"> <a href="https://github.com/mfreiholz/Roundcube-Persistent-Login-Plugin">Sources on Github</a></div>
         </div>
         <div class="project">
           <div class="title">HumbleLogging (C/C++)</div>
           <div class="description">HumbleLogging is a lightweight C++ logging framework. It aims to be extendible, easy to understand and as fast as possible.</div>
-          <div class="links"><a href="#">Homepage</a> | <a href="https://github.com/mfreiholz/humble-logging-library">Sources on Github</a></div>
+          <div class="links"><a href="#">Homepage</a> | <img src="img/GitHub-Mark-64px.png" width="16" height="16"> <a href="https://github.com/mfreiholz/humble-logging-library">Sources on Github</a></div>
         </div>
         <div class="project">
           <div class="title">insaneSums</div>
           <div class="description">insaneSums is a tool for calculating several common hash algorithms of files. It  is programmed in C++ and features a Qt powered GUI for easy cross platform portability.  The hash algorithms used in insaneSums are implemented in the Crypto++ library.</div>
-          <div class="links"><a href="#">Homepage</a> | <a href="#">Sources on Github</a></div>
+          <div class="links"><a href="#">Homepage</a> | <img src="img/GitHub-Mark-64px.png" width="16" height="16"> <a href="#">Sources on Github</a></div>
         </div>
         <div class="project">
           <div class="title">ColorPicker</div>
           <div class="description">ColorPicker is a tool to easily pick a color on your windows desktop. It features a Qt powered GUI.</div>
-          <div class="links"><a href="#">Homepage</a> | <a href="#">Sources on Github</a></div>
+          <div class="links"><a href="#">Homepage</a> | <img src="img/GitHub-Mark-64px.png" width="16" height="16"> <a href="#">Sources on Github</a></div>
         </div>
       </div>
       <div class="separator"></div>
