--- a/index.html
+++ b/index.html
@@ -8,8 +8,9 @@
     <meta name="description" content="Developer Group Homepage of insaneFactory">
     <meta name="keywords" content="iF.SVNAdmin, HumbleLogging, Roundcube Plugin Persistent Login, insaneSums, ColorPicker">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" type="text/css" href="http://fonts.googleapis.com/css?family=Open+Sans|Roboto|Audiowide">
+    <link rel="stylesheet" type="text/css" href="http://fonts.googleapis.com/css?family=Open+Sans|Roboto|Audiowide" />
     <link rel="stylesheet" type="text/css" href="css/main.css" />
+    <link rel="shortcut icon" type="image/png" href="img/iflogo-16x16.png" />
   </head>
   <body>
 
