--- a/index.html
+++ b/index.html
@@ -3,10 +3,9 @@
   <head>
     <title>insaneFactory</title>
     <meta charset="utf-8">
-    <meta name="google-site-verification" content="">
     <meta name="author" content="Manuel Freiholz, Michael Stein">
     <meta name="description" content="Developer Group Homepage of insaneFactory">
-    <meta name="keywords" content="iF.SVNAdmin, HumbleLogging, Roundcube Plugin Persistent Login, insaneSums, ColorPicker">
+    <meta name="keywords" content="TS3VIDEO, iF.SVNAdmin, HumbleLogging, Roundcube Plugin Persistent Login, insaneSums, ColorPicker, Software Development">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" type="text/css" href="http://fonts.googleapis.com/css?family=Open+Sans|Roboto|Audiowide" />
     <link rel="stylesheet" type="text/css" href="css/main.css" />
@@ -19,7 +18,7 @@
         <a href="index.html"><img src="img/iflogo-60x60.png" width="50" height="50"></a>
       </div>
       <ul>
-        <li><a href="index.html">Home</a></li>
+        <li><a href="">Home</a></li>
         <li><a href="#projects">Projects</a></li>
         <li><a href="http://forum.insanefactory.com">Community</a></li>
       </ul>
@@ -39,7 +38,7 @@
       <section class="about">
         <h1>We are</h1>
         <div class="content">
-            A group of passionate developers who like it to play with new technologies and building tools for every-day use.
+            A group of passionate developers who likes to play with new technologies and building tools for every-day use.
             You may follow us on our Twitter accounts: <a class="twitterlink" href="http://twitter.com/mfreiholz">@mfreiholz</a> / <a class="twitterlink" href="https://twitter.com/ifatsam">@ifatsam</a>
             <br><br>
             You may also visit our <a href="http://forum.insanefactory.com">community forum</a> for general news and discussions.
@@ -57,22 +56,22 @@
           <div class="project">
             <div class="title">TS3VIDEO</div>
             <div class="description">TS3VIDEO extends the already great voice communication software TeamSpeak with video conferencing functionality. The project provides the streaming-server and client-plugin component.</div>
-            <div class="links"><a href="http://ts3video.insanefactory.com/">Homepage</a> | <a href="http://forum.insanefactory.com/discussion/2/ts3video-basics#latest">Forum</a></div>
+            <div class="links"><a href="http://ts3video.insanefactory.com">Homepage</a> | <a href="http://forum.insanefactory.com/categories/ts3video">Forum</a></div>
           </div>
           <div class="project">
             <div class="title">iF.SVNAdmin</div>
             <div class="description">The iF.SVNAdmin application is a web based GUI to your Subversion authorization file. It is based on PHP 5.3 and requires a web server (Apache) to be installed. The application doesn’t need a database back end or anything similar, it is completely based on the Subversion authorization- and user authentication file. (Inludes LDAP support for users and groups)</div>
-            <div class="links"><a href="http://svnadmin.insanefactory.com/">Homepage</a> | <img src="img/GitHub-Mark-64px.png" width="16" height="16"> <a href="https://github.com/mfreiholz/iF.SVNAdmin">Sources on Github</a></div>
+            <div class="links"><a href="http://svnadmin.insanefactory.com/">Homepage</a> | <a href="http://forum.insanefactory.com/categories/svnadmin">Forum</a> | <img src="img/GitHub-Mark-64px.png" width="16" height="16"> <a href="https://github.com/mfreiholz/iF.SVNAdmin">Sources on Github</a></div>
           </div>
           <div class="project">
             <div class="title">RC Persistent Login</div>
             <div class="description">This server-side plugin is useful for all Roundcube users who don’t like to log into their mail account each time they open their browser. The plugin stores a persistent login cookie which automatically logs the user in the next time he or she visits the Roundcube web mailer.</div>
-            <div class="links"><a href="#">Homepage</a> | <img src="img/GitHub-Mark-64px.png" width="16" height="16"> <a href="https://github.com/mfreiholz/Roundcube-Persistent-Login-Plugin">Sources on Github</a></div>
+            <div class="links"><img src="img/GitHub-Mark-64px.png" width="16" height="16"> <a href="https://github.com/mfreiholz/Roundcube-Persistent-Login-Plugin">Sources on Github</a></div>
           </div>
           <div class="project">
             <div class="title">HumbleLogging (C/C++)</div>
             <div class="description">HumbleLogging is a lightweight C++ logging framework. It aims to be extendible, easy to understand and as fast as possible.</div>
-            <div class="links"><a href="#">Homepage</a> | <img src="img/GitHub-Mark-64px.png" width="16" height="16"> <a href="https://github.com/mfreiholz/humble-logging-library">Sources on Github</a></div>
+            <div class="links"><a href="http://forum.insanefactory.com/categories/humblelogging">Forum</a> | <img src="img/GitHub-Mark-64px.png" width="16" height="16"> <a href="https://github.com/mfreiholz/humble-logging-library">Sources on Github</a></div>
           </div>
           <!--<div class="project">
             <div class="title">insaneSums</div>
