--- a/index.html
+++ b/index.html
@@ -14,9 +14,8 @@
   <body>
 
     <div class="top-nav">
-      <div class="logo">
-        <a href="index.html"><img src="img/iflogo-60x60.png" width="50" height="50"></a>
-      </div>
+      <div class="logo"><a href=""><img src="img/iflogo-60x60.png" width="60" height="60"></a></div>
+      <div class="title"></div>
       <ul>
         <li><a href="">Home</a></li>
         <li><a href="#projects">Projects</a></li>
@@ -96,21 +95,17 @@
       <div class="copyright">Copyright &copy; 2015 insaneFactory</div>
     </div>
 
-<!-- Piwik -->
-<script type="text/javascript">
-  var _paq = _paq || [];
-  _paq.push(['trackPageView']);
-  _paq.push(['enableLinkTracking']);
-  (function() {
-    var u="//piwik.insanefactory.com/";
-    _paq.push(['setTrackerUrl', u+'piwik.php']);
-    _paq.push(['setSiteId', 1]);
-    var d=document, g=d.createElement('script'), s=d.getElementsByTagName('script')[0];
-    g.type='text/javascript'; g.async=true; g.defer=true; g.src=u+'piwik.js'; s.parentNode.insertBefore(g,s);
-  })();
+<!-- Google Analytics -->
+<script>
+  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+  })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+
+  ga('create', 'UA-61191413-1', 'auto');
+  ga('send', 'pageview');
 </script>
-<noscript><p><img src="//piwik.insanefactory.com/piwik.php?idsite=1" style="border:0;" alt="" /></p></noscript>
-<!-- End Piwik Code -->
+<!--/ Google Analytics -->
 
 
   </body>
