--- a/index.html
+++ b/index.html
@@ -10,13 +10,14 @@
     <link rel="stylesheet" type="text/css" href="http://fonts.googleapis.com/css?family=Open+Sans|Roboto|Audiowide" />
     <link rel="stylesheet" type="text/css" href="css/main.css" />
     <link rel="shortcut icon" type="image/png" href="img/iflogo-16x16.png" />
+    <script type="text/javascript" src="thirdparty/jquery/jquery-2.1.3.min.js"></script>
   </head>
   <body>
 
     <div class="top-nav">
       <div class="logo"><a href=""><img src="img/iflogo-60x60.png" width="60" height="60"></a></div>
-      <div class="title"></div>
-      <ul>
+      <div class="title">Home</div>
+      <ul class="links">
         <li><a href="">Home</a></li>
         <li><a href="#projects">Projects</a></li>
         <li><a href="http://forum.insanefactory.com">Community</a></li>
@@ -94,19 +95,6 @@
     <div class="footer">
       <div class="copyright">Copyright &copy; 2015 insaneFactory</div>
     </div>
-
-<!-- Google Analytics -->
-<script>
-  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-  })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
-
-  ga('create', 'UA-61191413-1', 'auto');
-  ga('send', 'pageview');
-</script>
-<!--/ Google Analytics -->
-
 
   </body>
 </html>
