Adds up-to-date insaneSums project.

--- a/index.html
+++ b/index.html
@@ -76,12 +76,12 @@
             <div class="description">HumbleLogging is a lightweight C++ logging framework. It aims to be extendible, easy to understand and as fast as possible.</div>
             <div class="links"><a href="http://forum.insanefactory.com/categories/humblelogging">Forum</a> | <img src="img/GitHub-Mark-64px.png" width="16" height="16"> <a href="https://github.com/mfreiholz/humble-logging-library">Sources on Github</a></div>
           </div>
-          <!--<div class="project">
-            <div class="title">insaneSums</div>
-            <div class="description">insaneSums is a tool for calculating several common hash algorithms of files. It  is programmed in C++ and features a Qt powered GUI for easy cross platform portability.  The hash algorithms used in insaneSums are implemented in the Crypto++ library.</div>
-            <div class="links"><a href="#">Homepage</a> | <img src="img/GitHub-Mark-64px.png" width="16" height="16"> <a href="#">Sources on Github</a></div>
-          </div>
           <div class="project">
+            <div class="title">insaneSums</div>
+            <div class="description">insaneSums is a simple tool that allows you to calculate different hashes on files to verify their integrity. It is programmed in C++ and features a <a href="http://www.qt.io/" target="_blank">Qt</a> powered GUI for easy cross platform portability. The hash algorithms are provided by the <a href="http://www.cryptopp.com/" target="_blank">Crypto++</a> library.</div>
+            <div class="links">Download: <a href="http://downloads.insanefactory.com/insaneSums-1.3_Win64.zip">Windows (64 bit)</a> | Requires: <a href="https://www.microsoft.com/en-us/download/details.aspx?id=48145" target="_blank">Visual C++ Redistributable for Visual Studio 2015</a></div>
+          </div>
+          <!--<div class="project">
             <div class="title">ColorPicker</div>
             <div class="description">ColorPicker is a tool to easily pick a color on your windows desktop. It features a Qt powered GUI.</div>
             <div class="links"><a href="#">Homepage</a> | <img src="img/GitHub-Mark-64px.png" width="16" height="16"> <a href="#">Sources on Github</a></div>
