Removes all forum links.

--- a/index.html
+++ b/index.html
@@ -20,7 +20,6 @@
       <ul class="links">
         <li><a href="">Home</a></li>
         <li><a href="#projects">Projects</a></li>
-        <li><a href="http://forum.insanefactory.com">Community</a></li>
       </ul>
       <ul class="menutoggle">
         <li><a href=""><img src="img/ic_menu_black_36dp.png"></a></li>
@@ -44,7 +43,7 @@
             A group of passionate developers who likes to play with new technologies and building tools for every-day use.
             You may follow us on our Twitter accounts: <a class="twitterlink" href="http://twitter.com/mfreiholz">@mfreiholz</a> / <a class="twitterlink" href="https://twitter.com/ifatsam">@ifatsam</a>
             <br><br>
-            You may also visit our <a href="http://forum.insanefactory.com">community forum</a> for general news and discussions.
+            <!-- You may also visit our <a href="http://forum.insanefactory.com">community forum</a> for general news and discussions. -->
         </div>
       </section>
       <div class="separator"></div>
@@ -59,12 +58,12 @@
           <div class="project">
             <div class="title">TS3VIDEO</div>
             <div class="description">TS3VIDEO extends the already great voice communication software TeamSpeak with video conferencing functionality. The project provides the streaming-server and client-plugin component.</div>
-            <div class="links"><a href="http://ts3video.insanefactory.com">Homepage</a> | <a href="http://forum.insanefactory.com/categories/ts3video">Forum</a></div>
+            <div class="links"><a href="https://mfreiholz.de/ts3video">Homepage</a></div>
           </div>
           <div class="project">
             <div class="title">iF.SVNAdmin</div>
             <div class="description">The iF.SVNAdmin application is a web based GUI to your Subversion authorization file. It is based on PHP 5.3 and requires a web server (Apache) to be installed. The application doesn’t need a database back end or anything similar, it is completely based on the Subversion authorization- and user authentication file. (Inludes LDAP support for users and groups)</div>
-            <div class="links"><a href="http://svnadmin.insanefactory.com/">Homepage</a> | <a href="http://forum.insanefactory.com/categories/svnadmin">Forum</a> | <img src="img/GitHub-Mark-64px.png" width="16" height="16"> <a href="https://github.com/mfreiholz/iF.SVNAdmin">Sources on Github</a></div>
+            <div class="links"><a href="http://svnadmin.insanefactory.com/">Homepage</a> | <img src="img/GitHub-Mark-64px.png" width="16" height="16"> <a href="https://github.com/mfreiholz/iF.SVNAdmin">Sources on Github</a></div>
           </div>
           <div class="project">
             <div class="title">RC Persistent Login</div>
@@ -74,7 +73,7 @@
           <div class="project">
             <div class="title">HumbleLogging (C/C++)</div>
             <div class="description">HumbleLogging is a lightweight C++ logging framework. It aims to be extendible, easy to understand and as fast as possible.</div>
-            <div class="links"><a href="http://forum.insanefactory.com/categories/humblelogging">Forum</a> | <img src="img/GitHub-Mark-64px.png" width="16" height="16"> <a href="https://github.com/mfreiholz/humble-logging-library">Sources on Github</a></div>
+            <div class="links"><img src="img/GitHub-Mark-64px.png" width="16" height="16"> <a href="https://github.com/mfreiholz/humble-logging-library">Sources on Github</a></div>
           </div>
           <div class="project">
             <div class="title">insaneSums</div>
