--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
       <section class="about">
         <h1>We are</h1>
         <div class="content">
-            A group of passionate developers who likes to play with new technologies and building tools for every-day use.
+            A group of passionate developers who like to play with new technologies and build tools for everyday use.
             You may follow us on our Twitter accounts: <a class="twitterlink" href="http://twitter.com/mfreiholz">@mfreiholz</a> / <a class="twitterlink" href="https://twitter.com/ifatsam">@ifatsam</a>
             <br><br>
             <!-- You may also visit our <a href="http://forum.insanefactory.com">community forum</a> for general news and discussions. -->
